Changes by Thomas E Dickey <dickey@invisible-island.net>

20090709
	add patch from Aleksey Cheusov for external regexp libraries
	(originally comp.lang.awk June 15 2005, also cited in Debian #355442
	March 6, 2006).

20090705
	fixes to build on BeOS (if LIBS is set to -lroot), and QNX (redefinition
	of setmode).

20080909
	fix gcc 4.3.1 -Wall warnings

	transform mawk.ac.m4 to aclocal.m4, renaming macros to use "CF_" or
	"CF_MAWK_" prefixes depending on their reusability.  Modified macros
	to use quoting consistent with recent autoconf versions.

	regenerate configure with autoconf version 2.13.20030927

	regenerate parse.c with byacc - 1.9 20080827

	ifdef'd prototypes in nstd.h which belong to stdlib.h, string.h to
	use standard C by default.

	source-in Debian patches 01-08 (see below).

-------------------------------------------------------------------------------
Debian patches:

(Peter Eisentraut <petere@debian.org>  Sat, 05 Apr 2008 17:11:11 +0200)

08_fix-for-gcc3.3
	Debian #195371

(James Troup <james@nocrew.org>  Fri, 30 May 2003 15:24:50 +0100)

07_mawktest-check-devfull
	Debian #51875

06_parse.y-semicolons
	Debian #170973

05_-Wall-fixes

04_mawk.1-fix-pi
	Debian #103699

03_read-and-close-redefinition
	Debian #104124

02_fix-examples
	Debian #36011

01_error-on-full-fs
	Debian #28249
	Debian #4293

-------------------------------------------------------------------------------
1.3.1 -> 1.3.2 Sep 1996

1) Numeric but not integer indices caused core dump in new array scheme.
   Fixed bug and fired test division.

2) Added ferror() checks on writes.

3) Added some static storage specs to array.c to keep non-ansi 
   compilers happy.

1.3 -> 1.3.1 Sep 1996
Release to new ftp site ftp://ftp.whidbey.net.

1) Workaround for overflow exception in strtod, sunos5.5 solaris.

2) []...] and [^]...] put ] in a class (or not in a class) without
   having to use back-slash escape.

1.2.2 -> 1.3 Jul 1996